--- a/packages.config
+++ b/packages.config
@@ -35,4 +35,5 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
+  <package id="WebMatrix.WebData" version="2.0.30506.0" targetFramework="net472" />
 </packages>
