--- a/Web.config
+++ b/Web.config
@@ -91,4 +91,12 @@
       <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=8.0.30.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </providers>
   </entityFramework>
+  <system.webServer>
+	<defaultDocument>
+	  <files>
+	    <clear />
+        <add value="Translator.aspx"/>
+	  </files>
+	</defaultDocument>
+  </system.webServer>
 </configuration>
