--- a/RojakJelah.csproj
+++ b/RojakJelah.csproj
@@ -109,9 +109,10 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\css\about.css" />
+    <Content Include="Content\css\bootstrap.min.css" />
     <Content Include="Content\css\login.css" />
     <Content Include="Content\css\register.css" />
-    <Content Include="Content\css\translator.css" />
+    <Content Include="Content\css\styles.css" />
     <Content Include="Content\css\dictionary.css" />
     <Content Include="Content\image\about-photo.svg" />
     <Content Include="Content\image\icon_bw_blackbg 1.png" />
@@ -119,6 +120,10 @@
     <Content Include="Content\image\logo-icon.png" />
     <Content Include="Content\image\RojakJelah_w 1.png" />
     <Content Include="Content\image\textual_col_whitebg_nontransp 1.png" />
+    <Content Include="Content\js\about.js" />
+    <Content Include="Content\js\bootstrap.min.js" />
+    <Content Include="Content\js\dictionary.js" />
+    <Content Include="Content\js\script.js" />
     <Content Include="Content\Site.css" />
     <Content Include="Dictionary.aspx" />
     <Content Include="favicon.ico" />
@@ -143,7 +148,6 @@
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="Scripts\Myscripts\script.js" />
     <Content Include="Scripts\WebForms\DetailsView.js" />
     <Content Include="Scripts\WebForms\Focus.js" />
     <Content Include="Scripts\WebForms\GridView.js" />
