Fix css after Deshi's update

--- a/RojakJelah.csproj
+++ b/RojakJelah.csproj
@@ -108,22 +108,16 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\css\about.css" />
     <Content Include="Content\css\bootstrap.min.css" />
-    <Content Include="Content\css\login.css" />
-    <Content Include="Content\css\register.css" />
-    <Content Include="Content\css\styles.css" />
-    <Content Include="Content\css\dictionary.css" />
+    <Content Include="Content\css\master.css" />
     <Content Include="Content\image\about-photo.svg" />
     <Content Include="Content\image\icon_bw_blackbg 1.png" />
     <Content Include="Content\image\icon_colour 1.png" />
     <Content Include="Content\image\logo-icon.png" />
     <Content Include="Content\image\RojakJelah_w 1.png" />
     <Content Include="Content\image\textual_col_whitebg_nontransp 1.png" />
-    <Content Include="Content\js\about.js" />
     <Content Include="Content\js\bootstrap.min.js" />
-    <Content Include="Content\js\dictionary.js" />
-    <Content Include="Content\js\script.js" />
+    <Content Include="Content\js\translator.js" />
     <Content Include="Content\Site.css" />
     <Content Include="Dictionary.aspx" />
     <Content Include="favicon.ico" />
