--- a/RojakJelah.csproj
+++ b/RojakJelah.csproj
@@ -164,6 +164,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\css\bootstrap.min.css" />
+    <Content Include="Content\css\manageSuggestions.css" />
     <Content Include="Content\css\master.css" />
     <Content Include="Content\image\about-photo.svg" />
     <Content Include="Content\image\icon_bw_blackbg 1.png" />
@@ -172,6 +173,7 @@
     <Content Include="Content\image\RojakJelah_w 1.png" />
     <Content Include="Content\image\textual_col_whitebg_nontransp 1.png" />
     <Content Include="Content\js\bootstrap.min.js" />
+    <Content Include="Content\js\manageSuggestions.js" />
     <Content Include="Content\js\translator.js" />
     <Content Include="Content\Site.css" />
     <Content Include="Dictionary.aspx" />
@@ -189,6 +191,7 @@
     <Content Include="Login.aspx" />
     <Content Include="Register.aspx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="ManageSuggestions.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -243,6 +246,13 @@
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="ManageSuggestions.aspx.cs">
+      <DependentUpon>ManageSuggestions.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ManageSuggestions.aspx.designer.cs">
+      <DependentUpon>ManageSuggestions.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
