--- a/RojakJelah.csproj
+++ b/RojakJelah.csproj
@@ -185,7 +185,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\css\bootstrap.min.css" />
-    <Content Include="Content\css\manageSuggestions.css" />
+    <Content Include="Content\css\suggestions.css" />
     <Content Include="Content\css\master.css" />
     <Content Include="Content\image\about-photo.svg" />
     <Content Include="Content\image\icon_bw_blackbg 1.png" />
@@ -194,7 +194,7 @@
     <Content Include="Content\image\RojakJelah_w 1.png" />
     <Content Include="Content\image\textual_col_whitebg_nontransp 1.png" />
     <Content Include="Content\js\bootstrap.min.js" />
-    <Content Include="Content\js\manageSuggestions.js" />
+    <Content Include="Content\js\suggestions.js" />
     <Content Include="Content\js\translator.js" />
     <Content Include="Content\Site.css" />
     <Content Include="Dictionary.aspx" />
