--- a/packages.config
+++ b/packages.config
@@ -6,6 +6,7 @@
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.19.4" targetFramework="net472" />
+  <package id="IKVM" version="8.2.1" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net472" />
@@ -37,9 +38,11 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
+  <package id="SharpZipLib" version="1.3.3" targetFramework="net472" />
+  <package id="Stanford.NLP.CoreNLP" version="4.5.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.1" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net472" />
